--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
-    "jest-cli": "^25.3.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
+    "jest-cli": "^15.1.1"
   }
 }
